# tasks123

./: README.md
Ermolaeva Anastasia/: CMakeLists.txt  Hough.cpp  Hough.cpp~  Readme.txt
Ermolaeva_Anastasia/: CMakeCache.txt  Hough  Hough.cpp  Hough.cpp~  Makefile  cmake_install.cmake
Nasibullin_Oscar/: CMakeLists.txt  Mnist.cpp  Mnist.h  Readme.md  clear.sh  main.cpp  Описание.txt
Sibgatullin Damir/: Description.docx  main.cpp
